# tau

./: .gitignore  CMakeLists.txt
.run/: Splatter_two_players.run.xml
game/: CMakeLists.txt
game/data/shaders/: sprite.hlsl  sprite.msl
game/src/: Bullet.cpp  Bullet.h  GameObject.cpp  GameObject.h  NetworkLayer.h  PacketTypes.h  Packets.cpp  Packets.h  Player.cpp  Player.h  Serialization.h  Texture.cpp  main.cpp
game/src/core/: Asset.cpp  Asset.h  Input.cpp  Input.h  Macros.h  Types.h  Window.cpp  Window.h
game/src/game/: Bullet.cpp  Bullet.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
game/src/gfx/: MetalBuild.cpp  Renderer.cpp  Renderer.h  Renderer.mm  Texture.cpp  Texture.h
game/src/gfx/api/: Device.h  Resources.h
game/src/gfx/api/backend/dx11/: Device.cpp
game/src/gfx/api/backend/metal/: Device.mm
game/src/lib/: json.h
game/src/lib/cereal/: cereal.hpp
game/src/net/: NetworkLayer.h  Packets.cpp  Packets.h
game/src/server/: Server.cpp  Server.h
relay/: CMakeLists.txt  main.cpp
shared/: packet.h  qb.h
